--- a/index.html
+++ b/index.html
@@ -30,36 +30,86 @@
     </div>
 
     <!-- Conteúdo Principal -->
-    <div class="container" id="main-content">
-        <h1>Título Principal</h1>
+<div class="container" id="main-content">
+  <h1>Curso de Matemática - Nível 1: Fundamentos Básicos</h1>
 
-        <!-- Espaço para a imagem -->
-        <div class="image-container">
-            <img src="imagens/default.jpg" alt="Imagem">
-        </div>
-        <hr>
+  <!-- Espaço para a imagem -->
+  <div class="image-container">
+      <img src="imagens/math-basics.jpg" alt="Fundamentos Matemáticos">
+  </div>
+  <hr>
 
-        <!-- Seções e módulos -->
-        <section id="module1">
-            <div class="progress-container">
-                <div class="progress-bar" id="progress-bar1"></div>
-                <div class="progress-text" id="progress-text1">0% concluído</div>
-            </div>
-            <h2><strong>Módulo 1: Exemplo</strong></h2>
-            <p>Descrição do módulo 1.</p>
-            <ul>
-                <li><a href="modulo1/exemplo.html"><strong>Exemplo de Link</strong></a></li>
-                <!-- Mais itens aqui -->
-            </ul>
-        </section>
-        <hr>
+  <!-- Módulo 1 -->
+  <section id="module1">
+      <div class="progress-container">
+          <div class="progress-bar" id="progress-bar1"></div>
+          <div class="progress-text" id="progress-text1">0% concluído</div>
+      </div>
+      <h2><strong>Módulo 1: Números e Operações Básicas</strong></h2>
+      <p>Este módulo introduz os conceitos de números e operações fundamentais, como adição, subtração, multiplicação e divisão.</p>
+      <ul>
+          <li><a href="modulo1/numeros-operacoes.html"><strong>Números: Naturais, Inteiros e Racionais</strong></a></li>
+          <li><a href="modulo1/operacoes.html"><strong>Operações: Adição, Subtração, Multiplicação e Divisão</strong></a></li>
+          <li><a href="modulo1/propriedades-operacoes.html"><strong>Propriedades das Operações</strong></a></li>
+          <li><a href="modulo1/problemas-simples.html"><strong>Resolução de Problemas Simples</strong></a></li>
+      </ul>
+  </section>
+  <hr>
 
-        <!-- Outros módulos seguem o mesmo padrão -->
-        
-    </div>
+  <!-- Módulo 2 -->
+  <section id="module2">
+      <div class="progress-container">
+          <div class="progress-bar" id="progress-bar2"></div>
+          <div class="progress-text" id="progress-text2">0% concluído</div>
+      </div>
+      <h2><strong>Módulo 2: Frações, Decimais e Porcentagem</strong></h2>
+      <p>Este módulo aborda o entendimento e as operações com frações, decimais e porcentagens, essenciais para o uso cotidiano da matemática.</p>
+      <ul>
+          <li><a href="modulo2/fracoes.html"><strong>Frações: Conceito e Operações</strong></a></li>
+          <li><a href="modulo2/decimais.html"><strong>Decimais: Conversão e Operações</strong></a></li>
+          <li><a href="modulo2/porcentagem.html"><strong>Porcentagens: Cálculo e Aplicação</strong></a></li>
+          <li><a href="modulo2/proporcao-regra-de-tres.html"><strong>Proporção e Regra de Três</strong></a></li>
+      </ul>
+  </section>
+  <hr>
+
+  <!-- Módulo 3 -->
+  <section id="module3">
+      <div class="progress-container">
+          <div class="progress-bar" id="progress-bar3"></div>
+          <div class="progress-text" id="progress-text3">0% concluído</div>
+      </div>
+      <h2><strong>Módulo 3: Medidas e Geometria Básica</strong></h2>
+      <p>Neste módulo, exploramos as principais unidades de medida, além de conceitos básicos de geometria plana.</p>
+      <ul>
+          <li><a href="modulo3/unidades-medida.html"><strong>Unidades de Medida e Conversão</strong></a></li>
+          <li><a href="modulo3/figuras-geometricas.html"><strong>Figuras Geométricas: Perímetro e Área</strong></a></li>
+          <li><a href="modulo3/volume.html"><strong>Cálculo de Volume</strong></a></li>
+      </ul>
+  </section>
+  <hr>
+
+  <!-- Módulo 4 -->
+  <section id="module4">
+      <div class="progress-container">
+          <div class="progress-bar" id="progress-bar4"></div>
+          <div class="progress-text" id="progress-text4">0% concluído</div>
+      </div>
+      <h2><strong>Módulo 4: Introdução à Álgebra</strong></h2>
+      <p>O módulo de introdução à álgebra explora expressões algébricas simples e a resolução de equações de 1º grau.</p>
+      <ul>
+          <li><a href="modulo4/expressoes-algebricas.html"><strong>Expressões Algébricas Simples</strong></a></li>
+          <li><a href="modulo4/equacoes-1-grau.html"><strong>Equações de 1º Grau</strong></a></li>
+          <li><a href="modulo4/uso-letras-numeros.html"><strong>Uso de Letras para Representar Números</strong></a></li>
+          <li><a href="modulo4/problemas-equacoes.html"><strong>Resolução de Problemas com Equações</strong></a></li>
+      </ul>
+  </section>
+  <hr>
+
+</div>
 
     <footer>
-        <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Wellyngton Molinari. Todos os direitos reservados.</p>
     </footer>
 
     <script src="scripts.js"></script>
