--- a/index.html
+++ b/index.html
@@ -30,81 +30,210 @@
     </div>
 
     <!-- Conteúdo Principal -->
-<div class="container" id="main-content">
-  <h1>Curso de Matemática - Nível 1: Fundamentos Básicos</h1>
+    <div class="container" id="main-content">
+    <h1>Curso de Matemática - Nível 1: Fundamentos Básicos</h1>
 
-  <!-- Espaço para a imagem -->
-  <div class="image-container">
-      <img src="imagens/math-basics.jpg" alt="Fundamentos Matemáticos">
-  </div>
-  <hr>
+    <!-- Espaço para a imagem -->
+    <div class="image-container">
+        <img src="imagens/math-basics.jpg" alt="Fundamentos Matemáticos">
+    </div>
+    <hr>
 
-  <!-- Módulo 1 -->
-  <section id="module1">
-      <div class="progress-container">
-          <div class="progress-bar" id="progress-bar1"></div>
-          <div class="progress-text" id="progress-text1">0% concluído</div>
-      </div>
-      <h2><strong>Módulo 1: Números e Operações Básicas</strong></h2>
-      <p>Este módulo introduz os conceitos de números e operações fundamentais, como adição, subtração, multiplicação e divisão.</p>
-      <ul>
-          <li><a href="modulo1/numeros-operacoes.html"><strong>Números: Naturais, Inteiros e Racionais</strong></a></li>
-          <li><a href="modulo1/operacoes.html"><strong>Operações: Adição, Subtração, Multiplicação e Divisão</strong></a></li>
-          <li><a href="modulo1/propriedades-operacoes.html"><strong>Propriedades das Operações</strong></a></li>
-          <li><a href="modulo1/problemas-simples.html"><strong>Resolução de Problemas Simples</strong></a></li>
-      </ul>
-  </section>
-  <hr>
+    <!-- Módulo 1 -->
+    <section id="module1">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar1"></div>
+            <div class="progress-text" id="progress-text1">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 1: Números e Operações Básicas</strong></h2>
+        <p>Este módulo introduz os conceitos de números e operações fundamentais, como adição, subtração, multiplicação e divisão.</p>
+        <ul>
+            <li><a href="modulo1/numeros-operacoes.html"><strong>Números: Naturais, Inteiros e Racionais</strong></a></li>
+            <li><a href="modulo1/operacoes.html"><strong>Operações: Adição, Subtração, Multiplicação e Divisão</strong></a></li>
+            <li><a href="modulo1/propriedades-operacoes.html"><strong>Propriedades das Operações</strong></a></li>
+            <li><a href="modulo1/problemas-simples.html"><strong>Resolução de Problemas Simples</strong></a></li>
+        </ul>
+    </section>
+    <hr>
 
-  <!-- Módulo 2 -->
-  <section id="module2">
-      <div class="progress-container">
-          <div class="progress-bar" id="progress-bar2"></div>
-          <div class="progress-text" id="progress-text2">0% concluído</div>
-      </div>
-      <h2><strong>Módulo 2: Frações, Decimais e Porcentagem</strong></h2>
-      <p>Este módulo aborda o entendimento e as operações com frações, decimais e porcentagens, essenciais para o uso cotidiano da matemática.</p>
-      <ul>
-          <li><a href="modulo2/fracoes.html"><strong>Frações: Conceito e Operações</strong></a></li>
-          <li><a href="modulo2/decimais.html"><strong>Decimais: Conversão e Operações</strong></a></li>
-          <li><a href="modulo2/porcentagem.html"><strong>Porcentagens: Cálculo e Aplicação</strong></a></li>
-          <li><a href="modulo2/proporcao-regra-de-tres.html"><strong>Proporção e Regra de Três</strong></a></li>
-      </ul>
-  </section>
-  <hr>
+    <!-- Módulo 2 -->
+    <section id="module2">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar2"></div>
+            <div class="progress-text" id="progress-text2">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 2: Frações, Decimais e Porcentagem</strong></h2>
+        <p>Este módulo aborda o entendimento e as operações com frações, decimais e porcentagens, essenciais para o uso cotidiano da matemática.</p>
+        <ul>
+            <li><a href="modulo2/fracoes.html"><strong>Frações: Conceito e Operações</strong></a></li>
+            <li><a href="modulo2/decimais.html"><strong>Decimais: Conversão e Operações</strong></a></li>
+            <li><a href="modulo2/porcentagem.html"><strong>Porcentagens: Cálculo e Aplicação</strong></a></li>
+            <li><a href="modulo2/proporcao-regra-de-tres.html"><strong>Proporção e Regra de Três</strong></a></li>
+        </ul>
+    </section>
+    <hr>
 
-  <!-- Módulo 3 -->
-  <section id="module3">
-      <div class="progress-container">
-          <div class="progress-bar" id="progress-bar3"></div>
-          <div class="progress-text" id="progress-text3">0% concluído</div>
-      </div>
-      <h2><strong>Módulo 3: Medidas e Geometria Básica</strong></h2>
-      <p>Neste módulo, exploramos as principais unidades de medida, além de conceitos básicos de geometria plana.</p>
-      <ul>
-          <li><a href="modulo3/unidades-medida.html"><strong>Unidades de Medida e Conversão</strong></a></li>
-          <li><a href="modulo3/figuras-geometricas.html"><strong>Figuras Geométricas: Perímetro e Área</strong></a></li>
-          <li><a href="modulo3/volume.html"><strong>Cálculo de Volume</strong></a></li>
-      </ul>
-  </section>
-  <hr>
+    <!-- Módulo 3 -->
+    <section id="module3">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar3"></div>
+            <div class="progress-text" id="progress-text3">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 3: Medidas e Geometria Básica</strong></h2>
+        <p>Neste módulo, exploramos as principais unidades de medida, além de conceitos básicos de geometria plana.</p>
+        <ul>
+            <li><a href="modulo3/unidades-medida.html"><strong>Unidades de Medida e Conversão</strong></a></li>
+            <li><a href="modulo3/figuras-geometricas.html"><strong>Figuras Geométricas: Perímetro e Área</strong></a></li>
+            <li><a href="modulo3/volume.html"><strong>Cálculo de Volume</strong></a></li>
+        </ul>
+    </section>
+    <hr>
 
-  <!-- Módulo 4 -->
-  <section id="module4">
-      <div class="progress-container">
-          <div class="progress-bar" id="progress-bar4"></div>
-          <div class="progress-text" id="progress-text4">0% concluído</div>
-      </div>
-      <h2><strong>Módulo 4: Introdução à Álgebra</strong></h2>
-      <p>O módulo de introdução à álgebra explora expressões algébricas simples e a resolução de equações de 1º grau.</p>
-      <ul>
-          <li><a href="modulo4/expressoes-algebricas.html"><strong>Expressões Algébricas Simples</strong></a></li>
-          <li><a href="modulo4/equacoes-1-grau.html"><strong>Equações de 1º Grau</strong></a></li>
-          <li><a href="modulo4/uso-letras-numeros.html"><strong>Uso de Letras para Representar Números</strong></a></li>
-          <li><a href="modulo4/problemas-equacoes.html"><strong>Resolução de Problemas com Equações</strong></a></li>
-      </ul>
-  </section>
-  <hr>
+    <!-- Módulo 4 -->
+    <section id="module4">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar4"></div>
+            <div class="progress-text" id="progress-text4">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 4: Introdução à Álgebra</strong></h2>
+        <p>O módulo de introdução à álgebra explora expressões algébricas simples e a resolução de equações de 1º grau.</p>
+        <ul>
+            <li><a href="modulo4/expressoes-algebricas.html"><strong>Expressões Algébricas Simples</strong></a></li>
+            <li><a href="modulo4/equacoes-1-grau.html"><strong>Equações de 1º Grau</strong></a></li>
+            <li><a href="modulo4/uso-letras-numeros.html"><strong>Uso de Letras para Representar Números</strong></a></li>
+            <li><a href="modulo4/problemas-equacoes.html"><strong>Resolução de Problemas com Equações</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 5 -->
+    <section id="module5">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar5"></div>
+            <div class="progress-text" id="progress-text5">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 5: Potências e Raízes</strong></h2>
+        <p>Este módulo explora o conceito de potências, raízes e suas propriedades.</p>
+        <ul>
+            <li><a href="modulo5/potencias.html"><strong>Definição e Propriedades de Potências</strong></a></li>
+            <li><a href="modulo5/raizes.html"><strong>Raízes Quadradas e Cúbicas</strong></a></li>
+            <li><a href="modulo5/operacoes-potencias.html"><strong>Operações com Potências e Raízes</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 6 -->
+    <section id="module6">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar6"></div>
+            <div class="progress-text" id="progress-text6">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 6: Equações e Inequações</strong></h2>
+        <p>Estudo aprofundado de equações de 2º grau, inequações e sistemas de equações.</p>
+        <ul>
+            <li><a href="modulo6/equacoes-2-grau.html"><strong>Equações de 2º Grau: Resolução e Aplicações</strong></a></li>
+            <li><a href="modulo6/inequacoes.html"><strong>Inequações: Conceitos e Resolução</strong></a></li>
+            <li><a href="modulo6/sistemas-equacoes.html"><strong>Sistemas de Equações Lineares</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 7 -->
+    <section id="module7">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar7"></div>
+            <div class="progress-text" id="progress-text7">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 7: Geometria Plana e Espacial</strong></h2>
+        <p>Este módulo explora conceitos de geometria plana e espacial, incluindo cálculo de áreas e volumes.</p>
+        <ul>
+            <li><a href="modulo7/geometria-plana.html"><strong>Geometria Plana: Triângulos e Polígonos</strong></a></li>
+            <li><a href="modulo7/teorema-pitagoras.html"><strong>Teorema de Pitágoras</strong></a></li>
+            <li><a href="modulo7/geometria-espacial.html"><strong>Geometria Espacial: Cálculo de Volumes</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 8 -->
+    <section id="module8">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar8"></div>
+            <div class="progress-text" id="progress-text8">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 8: Funções</strong></h2>
+        <p>Introdução ao conceito de funções matemáticas, suas representações gráficas e aplicações.</p>
+        <ul>
+            <li><a href="modulo8/conceito-funcao.html"><strong>O que é uma Função?</strong></a></li>
+            <li><a href="modulo8/funcao-1-grau.html"><strong>Funções do 1º Grau</strong></a></li>
+            <li><a href="modulo8/funcao-2-grau.html"><strong>Funções do 2º Grau</strong></a></li>
+            <li><a href="modulo8/graficos-funcao.html"><strong>Gráficos de Funções</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 9 -->
+    <section id="module9">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar9"></div>
+            <div class="progress-text" id="progress-text9">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 9: Trigonometria</strong></h2>
+        <p>Estudo das funções trigonométricas e suas aplicações em problemas de geometria.</p>
+        <ul>
+            <li><a href="modulo9/seno-cosseno.html"><strong>Seno, Cosseno e Tangente</strong></a></li>
+            <li><a href="modulo9/circulo-trigonometrico.html"><strong>Círculo Trigonométrico</strong></a></li>
+            <li><a href="modulo9/equacoes-trigonometricas.html"><strong>Resolução de Equações Trigonométricas</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 10 -->
+    <section id="module10">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar10"></div>
+            <div class="progress-text" id="progress-text10">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 10: Funções Exponenciais e Logarítmicas</strong></h2>
+        <p>Introdução às funções exponenciais e logarítmicas e suas propriedades.</p>
+        <ul>
+            <li><a href="modulo10/funcao-exponencial.html"><strong>Função Exponencial: Definição e Propriedades</strong></a></li>
+            <li><a href="modulo10/funcao-logaritmica.html"><strong>Função Logarítmica: Definição e Propriedades</strong></a></li>
+            <li><a href="modulo10/equacoes-exponenciais-logaritmicas.html"><strong>Resolução de Equações Exponenciais e Logarítmicas</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 11 -->
+    <section id="module11">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar11"></div>
+            <div class="progress-text" id="progress-text11">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 11: Geometria Analítica</strong></h2>
+        <p>Estudo das formas geométricas no plano cartesiano, como retas, circunferências e outros elementos geométricos.</p>
+        <ul>
+            <li><a href="modulo11/plano-cartesiano.html"><strong>Coordenadas no Plano Cartesiano</strong></a></li>
+            <li><a href="modulo11/equacao-reta.html"><strong>Equação da Reta</strong></a></li>
+            <li><a href="modulo11/equacao-circulo.html"><strong>Equação da Circunferência</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 12 -->
+    <section id="module12">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar12"></div>
+            <div class="progress-text" id="progress-text12">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 12: Probabilidade e Estatística</strong></h2>
+        <p>Conceitos básicos de probabilidade e estatística, essenciais para análise de dados e tomadas de decisão.</p>
+        <ul>
+            <li><a href="modulo12/probabilidade.html"><strong>Introdução à Probabilidade</strong></a></li>
+            <li><a href="modulo12/analise-combinatoria.html"><strong>Análise Combinatória</strong></a></li>
+            <li><a href="modulo12/estatistica-basica.html"><strong>Estatística Básica: Média, Mediana e Moda</strong></a></li>
+        </ul>
+    </section>
+    <hr>
 
 </div>
 
