--- a/index.html
+++ b/index.html
@@ -235,6 +235,136 @@
     </section>
     <hr>
 
+    <!-- Módulo 13 -->
+    <section id="module13">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar13"></div>
+            <div class="progress-text" id="progress-text13">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 13: Matrizes e Determinantes</strong></h2>
+        <p>Este módulo aborda os conceitos de matrizes e determinantes, incluindo operações básicas e aplicações.</p>
+        <ul>
+            <li><a href="modulo13/introducao-matrizes.html"><strong>Introdução às Matrizes</strong></a></li>
+            <li><a href="modulo13/operacoes-matrizes.html"><strong>Operações com Matrizes</strong></a></li>
+            <li><a href="modulo13/determinantes.html"><strong>Determinantes: Cálculo e Propriedades</strong></a></li>
+            <li><a href="modulo13/sistemas-lineares.html"><strong>Resolução de Sistemas Lineares com Matrizes</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 14 -->
+    <section id="module14">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar14"></div>
+            <div class="progress-text" id="progress-text14">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 14: Cálculo Diferencial - Derivadas</strong></h2>
+        <p>Introdução ao cálculo diferencial, com foco no conceito de derivadas e suas aplicações.</p>
+        <ul>
+            <li><a href="modulo14/conceito-derivada.html"><strong>O que é uma Derivada?</strong></a></li>
+            <li><a href="modulo14/regras-derivacao.html"><strong>Regras de Derivação</strong></a></li>
+            <li><a href="modulo14/derivadas-aplicacoes.html"><strong>Aplicações de Derivadas</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 15 -->
+    <section id="module15">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar15"></div>
+            <div class="progress-text" id="progress-text15">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 15: Cálculo Integral - Integrais</strong></h2>
+        <p>Estudo do cálculo integral, com foco em integrais definidas e indefinidas, além de suas aplicações.</p>
+        <ul>
+            <li><a href="modulo15/conceito-integral.html"><strong>O que é uma Integral?</strong></a></li>
+            <li><a href="modulo15/regras-integracao.html"><strong>Regras de Integração</strong></a></li>
+            <li><a href="modulo15/integrais-aplicacoes.html"><strong>Aplicações de Integrais</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 16 -->
+    <section id="module16">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar16"></div>
+            <div class="progress-text" id="progress-text16">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 16: Álgebra Linear</strong></h2>
+        <p>Estudo de vetores, espaços vetoriais, transformações lineares e autovalores, com aplicações práticas em diversas áreas.</p>
+        <ul>
+            <li><a href="modulo16/vetores.html"><strong>Vetores: Operações e Aplicações</strong></a></li>
+            <li><a href="modulo16/espacos-vetoriais.html"><strong>Espaços Vetoriais</strong></a></li>
+            <li><a href="modulo16/autovalores-autovetores.html"><strong>Autovalores e Autovetores</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 17 -->
+    <section id="module17">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar17"></div>
+            <div class="progress-text" id="progress-text17">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 17: Equações Diferenciais</strong></h2>
+        <p>Introdução às equações diferenciais ordinárias, suas soluções e aplicações.</p>
+        <ul>
+            <li><a href="modulo17/introducao-equacoes-diferenciais.html"><strong>Introdução às Equações Diferenciais</strong></a></li>
+            <li><a href="modulo17/solucoes-equacoes-diferenciais.html"><strong>Soluções de Equações Diferenciais</strong></a></li>
+            <li><a href="modulo17/aplicacoes-equacoes-diferenciais.html"><strong>Aplicações Práticas das Equações Diferenciais</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 18 -->
+    <section id="module18">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar18"></div>
+            <div class="progress-text" id="progress-text18">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 18: Cálculo Numérico</strong></h2>
+        <p>Este módulo aborda os métodos numéricos utilizados para resolver problemas matemáticos complexos que não possuem soluções analíticas exatas.</p>
+        <ul>
+            <li><a href="modulo18/metodos-bissecao.html"><strong>Método da Bisseção</strong></a></li>
+            <li><a href="modulo18/metodos-interpolacao.html"><strong>Métodos de Interpolação</strong></a></li>
+            <li><a href="modulo18/metodos-integracao-numerica.html"><strong>Métodos de Integração Numérica</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 19 -->
+    <section id="module19">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar19"></div>
+            <div class="progress-text" id="progress-text19">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 19: Análise Real</strong></h2>
+        <p>Estudo de limites, continuidade e funções reais, abordando rigorosamente os fundamentos do cálculo.</p>
+        <ul>
+            <li><a href="modulo19/limites.html"><strong>Limites: Conceitos e Aplicações</strong></a></li>
+            <li><a href="modulo19/continuidade.html"><strong>Continuidade de Funções</strong></a></li>
+            <li><a href="modulo19/teoremas-analisereal.html"><strong>Teoremas Fundamentais da Análise Real</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+    <!-- Módulo 20 -->
+    <section id="module20">
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar20"></div>
+            <div class="progress-text" id="progress-text20">0% concluído</div>
+        </div>
+        <h2><strong>Módulo 20: Análise Complexa</strong></h2>
+        <p>Estudo das funções de variáveis complexas, com ênfase em integrais e derivadas no plano complexo.</p>
+        <ul>
+            <li><a href="modulo20/numeros-complexos.html"><strong>Números Complexos</strong></a></li>
+            <li><a href="modulo20/funcoes-complexas.html"><strong>Funções de Variáveis Complexas</strong></a></li>
+            <li><a href="modulo20/integrais-complexas.html"><strong>Integrais no Plano Complexo</strong></a></li>
+        </ul>
+    </section>
+    <hr>
+
+
 </div>
 
     <footer>
