--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Curso</title>
+    <title>Curso de Matemática</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="imagens/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
