--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -21,10 +21,12 @@
             <button class="hide-sidebar-btn" id="hide-sidebar">&lt;</button>
         </h3>
         <nav>
-            <a href="#topico1">Tópico 1</a>
-            <a href="#topico2">Tópico 2</a>
-            <a href="#topico3">Tópico 3</a>
-            <a href="#topico4">Tópico 4</a>
+            <a href="#numeros-naturais">Números Naturais</a>
+            <a href="#numeros-inteiros">Números Inteiros</a>
+            <a href="#numeros-racionais">Números Racionais</a>
+            <a href="#comparacao">Comparação</a>
+            <a href="#exemplos">Exemplos na Vida Real</a>
+            <a href="#exercicios">Exercícios Propostos</a>
         </nav>
         <h3>Páginas Relacionadas</h3>
         <a href="extras.html">Recursos Adicionais</a>
@@ -33,38 +35,117 @@
 
     <!-- Conteúdo Principal -->
     <div class="container" id="main-content">
-        <h1>Fundamentos do Curso</h1>
+        <h1>Fundamentos dos Números</h1>
 
-        <!-- Espaço para a imagem -->
-        <div class="image-container">
-            <img src="../imagens/curso.jpg" alt="Imagem do Curso">
-        </div>
-        <hr>
         <!-- Sessão de Fundamentos -->
         <section>
-            <h2><strong>Introdução</strong></h2>
-            <p>Este curso aborda os conceitos essenciais para o aprendizado, distribuídos em tópicos fáceis de seguir. Explore cada sessão para aprimorar seus conhecimentos.</p>
+            <h2 id="numeros-naturais"><strong>1. Números Naturais</strong></h2>
+            <p><strong>Definição:</strong> Os <strong>números naturais</strong> são utilizados para contar e ordenar. Incluem números inteiros positivos a partir do zero.</p>
+            <p><strong>Exemplo:</strong> \( N = \{0, 1, 2, 3, 4, 5, 6, \dots \} \)</p>
+            <p><strong>Propriedades:</strong></p>
             <ul>
-                <li>
-                    <h2 id="topico1"><strong>Tópico 1:</strong></h2>
-                    <p>Descrição e explicação detalhada do primeiro tópico do curso. Aqui serão explorados os conceitos fundamentais necessários para uma boa compreensão do conteúdo.</p>
-                </li>
-                <hr>
-                <li>
-                    <h2 id="topico2"><strong>Tópico 2:</strong></h2>
-                    <p>Descrição e explicação detalhada do segundo tópico. São fornecidos exemplos práticos para facilitar a assimilação dos conceitos.</p>
-                </li>
-                <hr>
-                <li>
-                    <h2 id="topico3"><strong>Tópico 3:</strong></h2>
-                    <p>O terceiro tópico explora o uso prático dos conceitos, com exercícios e atividades que consolidam o aprendizado.</p>
-                </li>
-                <hr>
-                <li>
-                    <h2 id="topico4"><strong>Tópico 4:</strong></h2>
-                    <p>Descrição e resumo das principais lições aprendidas, com dicas e orientações para o uso do conteúdo no dia a dia.</p>
-                </li>
+                <li><strong>Fechamento:</strong> A soma de dois números naturais é sempre um número natural. Ex.: \( 2 + 3 = 5 \).</li>
+                <li><strong>Identidade Aditiva:</strong> O número zero é o elemento neutro na adição. Ex.: \( 5 + 0 = 5 \).</li>
+                <li><strong>Não possui identidade multiplicativa inversa:</strong> A divisão de dois números naturais nem sempre resulta em outro número natural.</li>
             </ul>
+            <p><strong>Aplicação:</strong> Usado para contagem de objetos discretos, como o número de maçãs em uma cesta.</p>
+            <hr>
+
+            <h2 id="numeros-inteiros"><strong>2. Números Inteiros</strong></h2>
+            <p><strong>Definição:</strong> Os <strong>números inteiros</strong> incluem números naturais, seus opostos negativos e o zero.</p>
+            <p><strong>Exemplo:</strong> \( Z = \{\dots, -3, -2, -1, 0, 1, 2, 3, \dots \} \)</p>
+            <p><strong>Propriedades:</strong></p>
+            <ul>
+                <li><strong>Fechamento:</strong> A soma, subtração e multiplicação de dois inteiros resulta em outro número inteiro.</li>
+                <li><strong>Identidade Aditiva e Multiplicativa:</strong> \( x + 0 = x \) e \( x \times 1 = x \).</li>
+                <li><strong>Inverso Aditivo:</strong> Para todo \( x \), existe um oposto \( -x \) tal que \( x + (-x) = 0 \).</li>
+            </ul>
+            <p><strong>Aplicação:</strong> Utilizado em situações que envolvem valores negativos, como saldo bancário negativo.</p>
+            <hr>
+
+            <h2 id="numeros-racionais"><strong>3. Números Racionais</strong></h2>
+            <p><strong>Definição:</strong> Os <strong>números racionais</strong> podem ser expressos como fração de dois números inteiros, onde o denominador é diferente de zero.</p>
+            <p><strong>Exemplo:</strong> \( Q = \left\{ \frac{a}{b} \mid a \in Z, b \in Z, b \neq 0 \right\} \)</p>
+            <p><strong>Propriedades:</strong></p>
+            <ul>
+                <li><strong>Densidade:</strong> Entre dois números racionais sempre existe outro número racional.</li>
+                <li><strong>Fechamento:</strong> Soma, subtração, multiplicação e divisão de dois números racionais resultam em outro número racional.</li>
+                <li><strong>Decimais Finitos ou Repetidos:</strong> Números racionais têm decimais finitos ou periódicos.</li>
+            </ul>
+            <p><strong>Aplicação:</strong> Utilizado em medições, como frações de uma quantidade ou taxas de juros.</p>
+            <hr>
+
+            <h2 id="comparacao"><strong>4. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Propriedade</th>
+                        <th>Números Naturais</th>
+                        <th>Números Inteiros</th>
+                        <th>Números Racionais</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Representação</td>
+                        <td>\{0, 1, 2, 3, \dots \}</td>
+                        <td>\{\dots, -2, -1, 0, 1, 2, \dots \}</td>
+                        <td>\( \frac{a}{b}, a, b \in Z, b \neq 0 \)</td>
+                    </tr>
+                    <tr>
+                        <td>Contém números negativos?</td>
+                        <td>Não</td>
+                        <td>Sim</td>
+                        <td>Sim</td>
+                    </tr>
+                    <tr>
+                        <td>Contém frações?</td>
+                        <td>Não</td>
+                        <td>Não</td>
+                        <td>Sim</td>
+                    </tr>
+                    <tr>
+                        <td>Operações fechadas?</td>
+                        <td>Sim (+, *)</td>
+                        <td>Sim (+, -, *)</td>
+                        <td>Sim (+, -, *, /)</td>
+                    </tr>
+                </tbody>
+            </table>
+            <hr>
+
+            <h2 id="exemplos"><strong>5. Exemplos de Aplicações na Vida Real</strong></h2>
+            <ul>
+                <li><strong>Números Naturais:</strong> Contagem de objetos (ex.: alunos em uma sala).</li>
+                <li><strong>Números Inteiros:</strong> Dívidas ou temperaturas negativas (ex.: -3°C).</li>
+                <li><strong>Números Racionais:</strong> Medições precisas, como cortar uma pizza em frações.</li>
+            </ul>
+            <hr>
+
+            <h2 id="exercicios"><strong>6. Exercícios Propostos</strong></h2>
+            <ol>
+                <li>Classificação: Diga se os números a seguir são naturais, inteiros ou racionais:
+                    <ul>
+                        <li>7</li>
+                        <li>-4</li>
+                        <li>\( \frac{5}{3} \)</li>
+                        <li>0</li>
+                    </ul>
+                </li>
+                <li>Operações com Inteiros: Resolva as operações:
+                    <ul>
+                        <li>7 + (-3)</li>
+                        <li>-2 × 5</li>
+                        <li>\( (-10) - (-4) \)</li>
+                    </ul>
+                </li>
+                <li>Conversão de Racionais para Decimais: Converta as frações para decimais:
+                    <ul>
+                        <li>\( \frac{1}{4} \)</li>
+                        <li>\( \frac{2}{3} \)</li>
+                    </ul>
+                </li>
+            </ol>
         </section>
     </div>
 
