--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -256,7 +256,7 @@
         // Mostrar quais respostas estão incorretas
         if (wrongAnswers.length > 0) {
             let wrongList = wrongAnswers.map(q => `Questão ${q.slice(1)} está incorreta.`).join("\n");
-            alert(wrongList); // Mostra um alerta com as respostas erradas
+            // alert(wrongList); // Mostra um alerta com as respostas erradas
         }
     }
 
