nova imagem fundamentos

--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -39,6 +39,12 @@
     <div class="container" id="main-content">
         <h1>Fundamentos dos Números</h1>
 
+        <!-- Espaço para a imagem -->
+        <div class="image-container">
+            <img src="../imagens/modulo1/fundamentos.jpg" alt="Imagem do Curso">
+        </div>
+        <hr>
+
         <!-- Sessão de Fundamentos -->
         <section>
             <h2 id="numeros-naturais"><strong>1. Números Naturais</strong></h2>
