--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Online</title>
+    <title>Curso de Matemática - Fundamentos</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon" href="imagens/faviconcourse.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
@@ -48,16 +48,16 @@
         <!-- Sessão de Fundamentos -->
         <section>
             <h2 id="numeros-naturais"><strong>1. Números Naturais</strong></h2>
-            <p><strong>Definição:</strong> Os <strong>números naturais</strong> são utilizados para contar e ordenar. Incluem números inteiros positivos a partir do zero.</p>
-            <p><strong>Exemplo:</strong> <span class="example-number">N = {0, 1, 2, 3, 4, 5, 6, ...}</span></p>
-            <p><strong>Propriedades:</strong></p>
-            <ul>
-                <li><strong>Fechamento:</strong> A soma de dois números naturais é sempre um número natural. Ex.:<span class="example-number">( 2 + 3 = 5 ).</span></li>
-                <li><strong>Identidade Aditiva:</strong> O número zero é o elemento neutro na adição. Ex.:<span class="example-number">( 5 + 0 = 5 ).</span></li>
-                <li><strong>Não possui identidade multiplicativa inversa:</strong> A divisão de dois números naturais nem sempre resulta em outro número natural.</li>
-            </ul>
-            <p><strong>Aplicação:</strong> Usado para contagem de objetos discretos, como o número de maçãs em uma cesta.</p>
-            <hr>
+        <p><strong>Definição:</strong> Os <strong>números naturais</strong> são os números que usamos para contar coisas ou organizar em ordem. Eles começam no zero e seguem com números inteiros positivos, como 0, 1, 2, 3, 4 e assim por diante. Não incluem números negativos ou frações.</p>
+        <p><strong>Exemplo:</strong> <span class="example-number">N = {0, 1, 2, 3, 4, 5, 6, ...}</span></p>
+        <p><strong>Propriedades:</strong></p>
+        <ul>
+            <li><strong>Fechamento:</strong> Quando você soma dois números naturais, o resultado também será um número natural. Ex.:<span class="example-number"> ( 2 + 3 = 5 ).</span></li>
+            <li><strong>Identidade Aditiva:</strong> O número zero é especial na adição, porque ele não muda o valor do outro número. Ex.:<span class="example-number"> ( 5 + 0 = 5 ).</span></li>
+            <li><strong>Não tem inverso multiplicativo:</strong> Isso significa que nem sempre podemos dividir dois números naturais e obter outro número natural. Ex.: <span class="example-number">( 1 ÷ 2 = 0.5, e 0.5 não é um número natural ).</span></li>
+        </ul>
+        <p><strong>Aplicação:</strong> Os números naturais são muito úteis para contar coisas que podemos separar em partes, como o número de maçãs em uma cesta.</p>
+        <hr>
 
             <h2 id="numeros-inteiros"><strong>2. Números Inteiros</strong></h2>
             <p><strong>Definição:</strong> Os <strong>números inteiros</strong> incluem números naturais, seus opostos negativos e o zero.</p>
