--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -60,18 +60,17 @@
         <hr>
 
             <h2 id="numeros-inteiros"><strong>2. Números Inteiros</strong></h2>
-            <p><strong>Definição:</strong> Os <strong>números inteiros</strong> incluem números naturais, seus opostos negativos e o zero.</p>
+            <p><strong>Definição:</strong> Os <strong>números inteiros</strong> incluem todos os números naturais (0, 1, 2, 3, ...), seus opostos negativos (-1, -2, -3, ...) e o zero. Eles não incluem frações ou decimais.</p>
             <p><strong>Exemplo:</strong> <span class="example-number">Z = {..., -3, -2, -1, 0, 1, 2, 3, ...}</span></p>
             <p><strong>Propriedades:</strong></p>
             <ul>
-                <li><strong>Fechamento:</strong> A soma, subtração e multiplicação de dois inteiros resulta em outro número inteiro.</li>
-                <li><strong>Identidade Aditiva e Multiplicativa:</strong> <span class="example-number">x + 0 = x</span> e <span class="example-number">x × 1 = x</span>.</li>
-                <li><strong>Inverso Aditivo:</strong> Para todo <span class="example-number">x</span>, existe um oposto <span class="example-number">-x</span> tal que <span class="example-number">x + (-x) = 0</span>.</li>
-            </ul>            
-
-            <p><strong>Aplicação:</strong> Utilizado em situações que envolvem valores negativos, como saldo bancário negativo.</p>
+                <li><strong>Fechamento:</strong> Quando somamos, subtraímos ou multiplicamos dois números inteiros, o resultado sempre será outro número inteiro. Exemplo: <span class="example-number">( -3 + 2 = -1 )</span>.</li>
+                <li><strong>Identidade Aditiva e Multiplicativa:</strong> O número 0 é o elemento neutro na adição, pois não altera o valor do número somado a ele (<span class="example-number">x + 0 = x</span>). O número 1 é o elemento neutro na multiplicação, pois multiplicar qualquer número por 1 não altera o valor (<span class="example-number">x × 1 = x</span>).</li>
+                <li><strong>Inverso Aditivo:</strong> Para cada número inteiro <span class="example-number">x</span>, existe um número oposto <span class="example-number">-x</span> que, quando somado ao número original, resulta em zero. Exemplo: <span class="example-number">x + (-x) = 0</span>.</li>
+            </ul>
+            <p><strong>Aplicação:</strong> Os números inteiros são úteis em situações que envolvem valores negativos, como por exemplo temperaturas negativas abaixo de 0.</p>
             <hr>
-
+        
             <h2 id="numeros-racionais"><strong>3. Números Racionais</strong></h2>
             <p><strong>Definição:</strong> Os <strong>números racionais</strong> podem ser expressos como fração de dois números inteiros, onde o denominador é diferente de zero.</p>
             <p><strong>Exemplo:</strong> <span class="example-number">Q = { a/b | a ∈ Z, b ∈ Z, b ≠ 0 }</span></p>
